8.0.0-rc4
 - Release candidate for 8.0.0.
 - Any changes will be logged under "8.0.0".
 - Stop trying to use/support `std::filesystem`.
 - `composite_into_buf()` now returns a `zview`.
 - Optionally pass `encoding_group` (or connection/transaction) into `params`.
 - Export `source_loc()`: render a `std::source_location` into text.
 - New, more IDE-friendly foramt for `source_location` in error messages.
 - Allow tests to run even on ASCII-only databases.
8.0.0
 - C++20 is now the oldest C++ version that libpqxx supports.
 - **Result/row iterators have changed.**  Instead of `i[n]` do `(*i)[n]`.
 - **Result equality now only compares identity, not the data inside.**
 - **Row/field equality now only compares identity, not the data inside.**
 - **Row/field lifetimes have changed: see `row_ref` and `field_ref`.
 - **`pqxx::bytes` is now a vector of bytes, not a string of bytes.** (#924)
 - Use `pqxx::bytes::data()` instead of `pqxx::bytes::c_str()`.
 - The string conversion API has changed! (Old API should still work). (#948)
 - "String conversion" to `std::string_view` etc. is now supported. (#694)
 - Simpler to use: `pqxx::from_string()`, `pqxx::to_buf()`, `pqxx::into_bu()`.
 - `to_buf()` and `into_buf()` functions will no longer zero-terminate.
 - **Beware lifetime** when "converting" a string to `std::string_view`!
 - Conversion from string to `char const *` is no longer allowed.
 - Binary data can be any `std::contiguous_range` of `std::byte`. (#925)
 - Generic `quote()` takes `always_null` into account.
 - You can now convert strings to `pqxx::array` types.
 - You can now parse SQL arrays straight into `std::vector` and such.
 - There are fewer raw pointers in the API, for safety & verifiability.
 - The libpqxx exceptions now have a `std::source_location`. (#923)
 - Result & row iterators are now proper random access iterators.
 - More getters are now `noexcept`.
 - Retired `binarystring` and its headers.  Use `blob` instead.