@@ -5,8 +5,9 @@
  - `composite_into_buf()` now returns a `zview`.
  - Optionally pass `encoding_group` (or connection/transaction) into `params`.
  - Export `source_loc()`: render a `std::source_location` into text.
- - New, more IDE-friendly foramt for `source_location` in error messages.
+ - New, more IDE-friendly format for `source_location` in error messages.
  - Allow tests to run even on ASCII-only databases.
+ - Document: `affected_rows()` now also works for `SELECT`. (#1139)
 8.0.0
  - C++20 is now the oldest C++ version that libpqxx supports.
  - **Result/row iterators have changed.**  Instead of `i[n]` do `(*i)[n]`.
